[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linac4-rl-benchmark"
version = "1.0.0"
description = "RL benchmark for beam steering on the CERN Linac4 transfer line using measured response matrices."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Simon Hirlaender"},
]

# Historical dependencies -- TF 1.x is no longer installable on modern systems.
# Listed here for documentation purposes only.
dependencies = [
    "tensorflow>=1.12,<2.0",
    "gym>=0.10,<0.26",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "bayesian-optimization",
    "h5py",
]

[project.urls]
Repository = "https://github.com/MathPhysSim/linac4-rl-benchmark"
